--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Warpcon 33</title>
 
   <meta name="title" content="Warpcon 33">
-  <meta name='description' content='Warpcon 33 is a 3-day conference.' />
-  <meta name="keywords" content="warpcon, warps">
+  <meta name='description' content='Warpcon 33 is a 3-day gaming convention in UCC.' />
+  <meta name="keywords" content="warpcon, warps, rpgs, roleplaying games, ucc">
 
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -20,22 +20,24 @@
     <nav>
       <ul>
         <li>
-          <a href="">Get tickets</a>
+          <a href="#tickets">Get tickets</a>
         </li>
         <li>
-          <a href="">Schedule</a>
-        </li>
-        </li>
-        <li>
-          <a href="">Vendors</a>
+          <a href="#schedule">Schedule</a>
         </li>
         </li>
         <li>
-          <a href="">Traders</a>
+          <a href="#vendors">Vendors</a>
         </li>
         </li>
         <li>
-          <a href="">Submit your Campaign</a>
+          <a href="#traders">Traders</a>
+        </li>
+        <li>
+          <a href="#staff">Join staff</a>
+        </li>
+        <li>
+          <a href="#rpgsubmission">Submit your Campaign</a>
         </li>
       </ul>
     </nav>
@@ -43,9 +45,29 @@
   <article id="info-section">
 
     <h4>
-      Warpcon is a 3-day convention that brings gamers together to socialize, play games and learn about different game
+      Warpcon is a 3-day convention that brings gamers together to socialize, play games and try out different game
       systems.
     </h4>
+
+    <h4>
+      Games ran will include
+    </h4>
+
+    <ul>
+      <li>
+        RPGs including - <em>D&D 5e</em>, <em>Cyberpunk</em> & <em>Trail of Cthulu</em>
+      </li>
+      <li>
+        CCGs including - <em>Magic: The Gathering</em>, <em>Pokémon</em>, <em>Digimon</em> & <em>Yu-Gi-Oh</em>!
+      </li>
+      <li>
+        Wargames including - <em>Warhammer</em> and <em>Art de la Guerre</em>
+      </li>
+      <li>
+        We will also be hosting <em>LARPS</em> and a <em>Blood Bowl</em> tournament
+      </li>
+    </ul>
+
     <section id="tickets">
       <h1>
         <a href="#tickets">Warpcon Tickets</a>
@@ -58,10 +80,16 @@
         respective events.
       </p>
 
-
       <a href="/">Get tickets for Warpcon 33!</a>
-    </section>
 
+
+      <div class="map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2462.1997900178912!2d-8.492542583608891!3d51.89381799019596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4844902363c80895%3A0x13f9a0fceadebf24!2sDevere%20Hall!5e0!3m2!1sen!2sie!4v1669733316168!5m2!1sen!2sie"
+          allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </section>
+    <!-- 
     <section id="schedule">
       <h1>
         <a href="#schedule">Schedule</a>
@@ -69,8 +97,8 @@
 
       <p>
         Warpcon's schedule is not finalized and will be subject to change.
-        Make sure to keep up-to-date with our <a href="/">Facebook page</a> to
-        learn more.
+        Make sure to keep up-to-date with our <a href="https://facebook.com/warpcon">
+        Facebook page</a> to learn more.
       </p>
 
       <table>
@@ -134,7 +162,7 @@
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2462.1997900178912!2d-8.492542583608891!3d51.89381799019596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4844902363c80895%3A0x13f9a0fceadebf24!2sDevere%20Hall!5e0!3m2!1sen!2sie!4v1669733316168!5m2!1sen!2sie"
           allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-    </section>
+    </section> -->
 
     <section id="vendors">
       <h1>
@@ -142,27 +170,45 @@
       </h1>
 
       <p>
-        Vendors are welcome to set up and sell their homemade wares (such as miniatures,
-        dice or other crafts) to the attendees at the Devere Hall, near Warpcon
-        reception.
+        Vendors are welcome to set up and sell their wares to the attendees at 
+        the Devere Hall, near Warpcon reception.
       </p>
     </section>
 
     <section id="traders">
       <h1>
-        <a href="traders">Traders</a>
+        <a href="#traders">Traders</a>
       </h1>
 
       <p>
-        Companies can rent a table to sell to Warpcon attendees for a small price.
-        For more information and to book a table, please reach out to
+        Companies can rent a table to sell to Warpcon attendees for the low cost of €100.
+        To rent a table, fill out the following <a
+          href="https://docs.google.com/forms/d/e/1FAIpQLSdW3TUd-WJG05cU-E4ebJN2YebRrKga6oix7W74uRJx01YAXQ/viewform">Google
+          Form</a>.
+        For more information, please reach out to
         <a href="mailto:warpcontrader@gmail.com">warpcontrader@gmail.com</a>.
+      </p>
+    </section>
+
+    <section id="staff">
+      <h1>
+        <a href="#stuff">Want to join staff?</a>
+      </h1>
+      <p>
+        Staff at Warpon are an integral part of delivering a great experience to our
+        attendees. Warpcon staff will receive a tshirt and food vouchers.
+        
+        We will be putting out a call for staff at Warpcon soon, so keep 
+        an eye on our socials for announcements.
+        
+        <!-- If you are interested in joining staff for Warpcon 33, please
+        fill out the following <a href="">Google Form</a> -->
       </p>
     </section>
 
     <section id="rpgsubmission">
       <h1>
-        <a href="rpgsubmission">Submit your Campaign or Run an RPG One-Shot</a>
+        <a href="#rpgsubmission">Submit your Campaign or Run an RPG One-Shot</a>
       </h1>
 
       <p>
@@ -177,9 +223,9 @@
       </p>
 
       <p>
-        <em>If you are interested in running an RPG as a GM</em>, please fill out the
-        following <a href="">Google Form</a>. If you run 3 games or more, you can
-        have your Warpcon ticket reimbursed as a thank you.
+        <em>If you are interested in running an RPG as a GM</em>, we'll be putting out a
+        call for GMs at a later date. GMs who run 3 or more one-shots, will get their 
+        Warpcon tickets for free.
       </p>
     </section>
   </article>
