--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" itemscope itemtype="https://schema.org/Event">
 
 <head>
   <meta charset="UTF-8">
@@ -7,9 +7,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Warpcon 33</title>
 
+  <!-- schema.org event -->
+  
+
   <meta name="title" content="Warpcon 33">
   <meta name='description' content='Warpcon 33 is a 3-day gaming convention in UCC.' />
-  <meta name="keywords" content="warpcon, warps, rpgs, roleplaying games, ucc">
+  <meta name="keywords" content="warpcon, warps, rpgs, ttrpgs, cardgames, ccgs, boardgames roleplaying games, ucc">
+  <meta name="author" content="Warpcon">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+
+  <meta name="og:title" content="Warpcon 33">
+  <meta name="og:description" content="Warpcon 33 is a 3-day gaming convention in UCC.">
+  <meta property="og:url" content="https://warpcon.ie/">
+  <meta name="og:site_name" content="Warpcon">
+  <meta name="og:image" content="assets/banner.png">
+  <meta name="og:type" content="Event">
+
 
   <link rel="stylesheet" href="styles.css">
 </head>
