added rulesets and schedules for rpgs and larps

--- a/schedule.html
+++ b/schedule.html
@@ -1,12 +1,14 @@
 ---
+title: Schedule
 layout: default
-permalink: /schedule/
+permalink: /schedule
+image: hero.jpg
 ---
-
-{% include navigation.html %}
+{% include top-section.html %}
+<!-- {% include navigation.html %} -->
 
 <div id="schedule">
-    <h1> Schedule </h1>
+    <!-- <h1>Schedule </h1> -->
 
     <p>
         The schedule is subject to change. Any updates will be posted here or will
@@ -14,7 +16,7 @@ permalink: /schedule/
     </p>
 
     <section class="schedule" id="rpgs">
-        <h1>RPGs</h1>
+        <h1><a href="#rpgs">RPGs</a></h1>
 
         <h2>Friday, 27th January</h2>
         <table>
@@ -24,10 +26,10 @@ permalink: /schedule/
                     <td>
                         <ul>
                             <li>
-                                <b>Room 2 - </b><a href="/events/thing">Let's try Microscope</a>
+                                <b>Room 2 - </b><a href="/games/2023/comingsoon">Let's try Microscope</a>
                             </li>
                             <li>
-                                <b>Room 4 - </b><a href="/events/thing">Giant Monsters and PR Disasters</a>
+                                <b>Room 4 - </b><a href="/games/2023/comingsoon">Giant Monsters and PR Disasters</a>
                             </li>
                         </ul>
                     </td>
@@ -36,17 +38,17 @@ permalink: /schedule/
         </table>
  
         <h2>Saturday, 28th January</h2>
-        <table>
+       <table>
             <tbody>
                 <tr>
                     <td>10:00 - 13:00</td>
                     <td>
                         <ul>
                             <li>
-                                <b>Room 1 - </b><a href="/events/thing">One Last Bash</a>
+                                <b>Room 1 - </b><a href="/games/2023/comingsoon">One Last Bash</a>
                             </li>
                             <li>
-                                <b>Room 2 - </b><a href="/events/thing">Mage the Ascension 20: Isaac Newton Must Die</a>
+                                <b>Room 2 - </b><a href="/games/2023/comingsoon">Mage the Ascension 20: Isaac Newton Must Die</a>
                             </li>
                         </ul>
                     </td>
@@ -56,26 +58,142 @@ permalink: /schedule/
                     <td>
                         <ul>
                             <li>
-                                <b>Room 2 - </b><a href="/events/thing">Mage the Ascension 20: Isaac Newton Must Die</a>
+                                <b>Room 1 - </b><a href="/games/2023/comingsoon">Hyperion</a>
+                            </li>
+                            <li>
+                                <b>Room 2 - </b><a href="/games/2023/comingsoon">Mage the Ascension 20: Isaac Newton Must Die</a>
+                            </li>
+                            <li>
+                                <b>Room 3 - </b><a href="/games/2023/comingsoon">Original Sins</a>
+                            </li>
+                            <li>
+                                <b>Room 4 - </b><a href="/games/2023/comingsoon">The Opened Barrow</a>
+                            </li>
+                            <li>
+                                <b>Room 5 - </b><a href="/games/2023/comingsoon">Mage the Ascension 20: Isaac Newton Must Die</a>
+                            </li>
+                            <li>
+                                <b>Room 6 - </b><a href="/games/2023/comingsoon">Cybercork 2063: Soul-Shilled</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        18:00 - 21:00
+                    </td>
+                    <td>
+                        <ul>
+                            <li>
+                                <b>Room 1 - </b><a href="/games/2023/comingsoon">Let's Try Microscope</a>
+                            </li>
+                            <li>
+                                <b>Room 2 - </b><a href="/games/2023/comingsoon">Who Hoots for Who?</a>
+                            </li>
+                            <li>
+                                <b>Room 3 - </b><a href="/games/2023/comingsoon">Righteous Fiends</a>
+                            </li>
+                            <li>
+                                <b>Room 4 - </b><a href="/games/2023/comingsoon">Giant Monsters and PR Disasters</a>
+                            </li>
+                            <li>
+                                <b>Room 6 - </b><a href="/games/2023/comingsoon">One for the Road</a>
                             </li>
                         </ul>
                     </td>
                 </tr>
             </tbody>
-        </table>       <!-- <ul>
-            <li>
-                Room 1
-                <ul>
-                    <li>
-                        <span>
-                            18:00 - 21:00
-                        </span>
-                        <span>
-                            <a href="/events/thing">Cybercork 2063 - Soul-Shilled</a>
-                        </span>
-                    </li>
-                </ul>
-            </li>
-        </ul> -->
+        </table>       
+
+        <h2>Sunday, 29th January</h2>
+        <table>
+            <tbody>
+                <tr>
+                    <td>
+                        14:00 - 17:00
+                    </td>
+                    <td>
+                        <ul>
+                            <li>
+                                <b>Room 1 - </b><a href="/games/2023/comingsoon">One Last Bash</a>
+                            </li>
+                            <li>
+                                <b>Room 2 - </b><a href="/games/2023/comingsoon">Who Hoots for Who?</a>
+                            </li>
+                            <li>
+                                <b>Room 3 - </b><a href="/games/2023/comingsoon">Righteous Fiends</a>
+                            </li>
+                            <li>
+                                <b>Room 4 - </b><a href="/games/2023/comingsoon">The Opened Barrow</a>
+                            </li>
+                            <li>
+                                <b>Room 5 - </b><a href="/games/2023/comingsoon">Mage Ascension 20: Isaac Newton Must Die</a>
+                            </li>
+                            <li>
+                                <b>Room 6 - </b><a href="/games/2023/comingsoon">Cybercork 2063: Soul-Shilled</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        18:00 - 21:00
+                    </td>
+                    <td>
+                        <ul>
+                            <li>
+                                <b>Room 1 - </b><a href="/games/2023/comingsoon">Hyperion</a>
+                            </li>
+                            <li>
+                                <b>Room 3 - </b><a href="/games/2023/comingsoon">Original Sins</a>
+                            </li>
+                            <li>
+                                <b>Room 6 - </b><a href="/games/2023/comingsoon">One for the Road</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
+    <section class="schedule" id="larps">
+        <h1><a href="#larps">LARPS</a></h1>
+
+        <h2>Saturday, 28th January</h2>
+        <table>
+            <tbody>
+                <tr>
+                    <td>
+                        14:00 - 17:00
+                    </td>
+                    <td>
+                        City of No Flag Game: 18 Badlands Adventures
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        18:00 - 21:00
+                    </td>
+                    <td>
+                        Tales of Toholon: Last Refuge of the Scoundrel
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h2>Sunday, 28th January</h2>
+        <table>
+            <tbody>
+                <tr>
+                    <td>
+                        14:00 - 17:00
+                    </td>
+                    <td>
+                        Long Live the King
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </section>
 </div>
