added rpg and larps posts, updated schedule links

--- a/schedule.html
+++ b/schedule.html
@@ -26,10 +26,10 @@ image: hero.jpg
                     <td>
                         <ul>
                             <li>
-                                <b>Room 2 - </b><a href="/games/2023/comingsoon">Let's try Microscope</a>
+                                <b>Room 2 - </b><a href="/games/lets-try-microscope">Let's try Microscope</a>
                             </li>
                             <li>
-                                <b>Room 4 - </b><a href="/games/2023/comingsoon">Giant Monsters and PR Disasters</a>
+                                <b>Room 4 - </b><a href="/games/giant-monsters-and-pr-disasters">Giant Monsters and PR Disasters</a>
                             </li>
                         </ul>
                     </td>
@@ -45,10 +45,10 @@ image: hero.jpg
                     <td>
                         <ul>
                             <li>
-                                <b>Room 1 - </b><a href="/games/2023/comingsoon">One Last Bash</a>
+                                <b>Room 1 - </b><a href="/games/one-last-bash">One Last Bash</a>
                             </li>
                             <li>
-                                <b>Room 2 - </b><a href="/games/2023/comingsoon">Mage the Ascension 20: Isaac Newton Must Die</a>
+                                <b>Room 2 - </b><a href="/games/mage-the-ascension-20">Mage the Ascension 20: Isaac Newton Must Die</a>
                             </li>
                         </ul>
                     </td>
@@ -58,22 +58,22 @@ image: hero.jpg
                     <td>
                         <ul>
                             <li>
-                                <b>Room 1 - </b><a href="/games/2023/comingsoon">Hyperion</a>
+                                <b>Room 1 - </b><a href="/games/hyperion">Hyperion</a>
                             </li>
                             <li>
-                                <b>Room 2 - </b><a href="/games/2023/comingsoon">Mage the Ascension 20: Isaac Newton Must Die</a>
+                                <b>Room 2 - </b><a href="/games/mage-the-ascension-20">Mage the Ascension 20: Isaac Newton Must Die</a>
                             </li>
                             <li>
-                                <b>Room 3 - </b><a href="/games/2023/comingsoon">Original Sins</a>
+                                <b>Room 3 - </b><a href="/games/original-sins">Original Sins</a>
                             </li>
                             <li>
-                                <b>Room 4 - </b><a href="/games/2023/comingsoon">The Opened Barrow</a>
+                                <b>Room 4 - </b><a href="/games/the-opened-barrow">The Opened Barrow</a>
                             </li>
                             <li>
-                                <b>Room 5 - </b><a href="/games/2023/comingsoon">Mage the Ascension 20: Isaac Newton Must Die</a>
+                                <b>Room 5 - </b><a href="/games/mage-the-ascension-20">Mage the Ascension 20: Isaac Newton Must Die</a>
                             </li>
                             <li>
-                                <b>Room 6 - </b><a href="/games/2023/comingsoon">Cybercork 2063: Soul-Shilled</a>
+                                <b>Room 6 - </b><a href="/games/cybercork-2063-soul-shilled">Cybercork 2063: Soul-Shilled</a>
                             </li>
                         </ul>
                     </td>
@@ -85,19 +85,19 @@ image: hero.jpg
                     <td>
                         <ul>
                             <li>
-                                <b>Room 1 - </b><a href="/games/2023/comingsoon">Let's Try Microscope</a>
+                                <b>Room 1 - </b><a href="/games/lets-try-microscope">Let's Try Microscope</a>
                             </li>
                             <li>
-                                <b>Room 2 - </b><a href="/games/2023/comingsoon">Who Hoots for Who?</a>
+                                <b>Room 2 - </b><a href="/games/who-hoots-for-who">Who Hoots for Who?</a>
                             </li>
                             <li>
-                                <b>Room 3 - </b><a href="/games/2023/comingsoon">Righteous Fiends</a>
+                                <b>Room 3 - </b><a href="/games/righteous-fiends">Righteous Fiends</a>
                             </li>
                             <li>
-                                <b>Room 4 - </b><a href="/games/2023/comingsoon">Giant Monsters and PR Disasters</a>
+                                <b>Room 4 - </b><a href="/games/giant-monsters-and-pr-disasters">Giant Monsters and PR Disasters</a>
                             </li>
                             <li>
-                                <b>Room 6 - </b><a href="/games/2023/comingsoon">One for the Road</a>
+                                <b>Room 6 - </b><a href="/games/one-for-the-road">One for the Road</a>
                             </li>
                         </ul>
                     </td>
@@ -115,22 +115,22 @@ image: hero.jpg
                     <td>
                         <ul>
                             <li>
-                                <b>Room 1 - </b><a href="/games/2023/comingsoon">One Last Bash</a>
+                                <b>Room 1 - </b><a href="/games/one-last-bash">One Last Bash</a>
                             </li>
                             <li>
-                                <b>Room 2 - </b><a href="/games/2023/comingsoon">Who Hoots for Who?</a>
+                                <b>Room 2 - </b><a href="/games/who-hoots-for-who">Who Hoots for Who?</a>
                             </li>
                             <li>
-                                <b>Room 3 - </b><a href="/games/2023/comingsoon">Righteous Fiends</a>
+                                <b>Room 3 - </b><a href="/games/righteous-fiends">Righteous Fiends</a>
                             </li>
                             <li>
-                                <b>Room 4 - </b><a href="/games/2023/comingsoon">The Opened Barrow</a>
+                                <b>Room 4 - </b><a href="/games/the-opened-barrow">The Opened Barrow</a>
                             </li>
                             <li>
-                                <b>Room 5 - </b><a href="/games/2023/comingsoon">Mage Ascension 20: Isaac Newton Must Die</a>
+                                <b>Room 5 - </b><a href="/games/mage-the-ascension-20">Mage the Ascension 20: Isaac Newton Must Die</a>
                             </li>
                             <li>
-                                <b>Room 6 - </b><a href="/games/2023/comingsoon">Cybercork 2063: Soul-Shilled</a>
+                                <b>Room 6 - </b><a href="/games/cybercork-2063-soul-shilled">Cybercork 2063: Soul-Shilled</a>
                             </li>
                         </ul>
                     </td>
@@ -142,13 +142,13 @@ image: hero.jpg
                     <td>
                         <ul>
                             <li>
-                                <b>Room 1 - </b><a href="/games/2023/comingsoon">Hyperion</a>
+                                <b>Room 1 - </b><a href="/games/hyperion">Hyperion</a>
                             </li>
                             <li>
-                                <b>Room 3 - </b><a href="/games/2023/comingsoon">Original Sins</a>
+                                <b>Room 3 - </b><a href="/games/original-sins">Original Sins</a>
                             </li>
                             <li>
-                                <b>Room 6 - </b><a href="/games/2023/comingsoon">One for the Road</a>
+                                <b>Room 6 - </b><a href="/games/one-for-the-road">One for the Road</a>
                             </li>
                         </ul>
                     </td>
@@ -168,7 +168,7 @@ image: hero.jpg
                         14:00 - 17:00
                     </td>
                     <td>
-                        City of No Flag Game: 18 Badlands Adventures
+                        <a href="/games/city-of-no-flag">City of No Flag Game: 18 Badlands Adventures</a>
                     </td>
                 </tr>
                 <tr>
@@ -176,7 +176,7 @@ image: hero.jpg
                         18:00 - 21:00
                     </td>
                     <td>
-                        Tales of Toholon: Last Refuge of the Scoundrel
+                        <a href="/games/tales-of-toholon">Tales of Toholon: Last Refuge of the Scoundrel</a>
                     </td>
                 </tr>
             </tbody>
@@ -190,7 +190,7 @@ image: hero.jpg
                         14:00 - 17:00
                     </td>
                     <td>
-                        Long Live the King
+                        <a href="/games/long-live-the-king">Long Live the King</a>
                     </td>
                 </tr>
             </tbody>
