updated schedule, post descriptions and updated blog post-entry

--- a/schedule.html
+++ b/schedule.html
@@ -29,6 +29,9 @@ image: hero.jpg
                                 <b>Room 2 - </b><a href="/games/lets-try-microscope">Let's try Microscope</a>
                             </li>
                             <li>
+                                <b>Room 3 - </b><a href="/games/original-sins">Original Sins</a>
+                            </li>
+                            <li>
                                 <b>Room 4 - </b><a href="/games/giant-monsters-and-pr-disasters">Giant Monsters and PR Disasters</a>
                             </li>
                         </ul>
@@ -53,7 +56,9 @@ image: hero.jpg
                             <li>
                                 <b>Room 4 - </b><a href="/games/giant-monsters-and-pr-disasters">Giant Monsters and PR Disasters</a>
                             </li>
- 
+                            <li>
+                                <b>Room 6 - </b><a href="/games/magnificent-chassis">The Magnificent Chassis</a>
+                            </li>
                         </ul>
                     </td>
                 </tr>
@@ -69,9 +74,6 @@ image: hero.jpg
                             </li>
                             <li>
                                 <b>Room 4 - </b><a href="/games/the-opened-barrow">The Opened Barrow</a>
-                            </li>
-                            <li>
-                                <b>Room 5 - </b><a href="/games/mage-the-ascension-20">Mage the Ascension 20: Isaac Newton Must Die</a>
                             </li>
                             <li>
                                 <b>Room 6 - </b><a href="/games/cybercork-2063-soul-shilled">Cybercork 2063: Soul-Shilled</a>
@@ -108,6 +110,21 @@ image: hero.jpg
             <tbody>
                 <tr>
                     <td>
+                        10:00 - 13:00
+                    </td>
+                    <td>
+                        <ul>
+                            <li>
+                                <b>Room 1 - </b><a href="/games/hyperion">Hyperion</a>
+                            </li>
+                            <li>
+                                <b>Room 6 - </b><a href="/games/one-for-the-road">One for the Road</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         14:00 - 17:00
                     </td>
                     <td>
@@ -129,24 +146,6 @@ image: hero.jpg
                             </li>
                             <li>
                                 <b>Room 6 - </b><a href="/games/cybercork-2063-soul-shilled">Cybercork 2063: Soul-Shilled</a>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        18:00 - 21:00
-                    </td>
-                    <td>
-                        <ul>
-                            <li>
-                                <b>Room 1 - </b><a href="/games/hyperion">Hyperion</a>
-                            </li>
-                            <li>
-                                <b>Room 3 - </b><a href="/games/original-sins">Original Sins</a>
-                            </li>
-                            <li>
-                                <b>Room 6 - </b><a href="/games/one-for-the-road">One for the Road</a>
                             </li>
                         </ul>
                     </td>
