--- a/schedule.html
+++ b/schedule.html
@@ -16,7 +16,7 @@ image: hero.jpg
     </p>
 
     <section class="schedule" id="rpgs">
-        <h1><a href="#rpgs">RPGs</a></h1>
+        <h1>RPGs</h1>
 
         <h2>Friday, 27th January</h2>
         <table>
@@ -32,16 +32,17 @@ image: hero.jpg
                                 <b>Room 3 - </b><a href="/games/original-sins">Original Sins</a>
                             </li>
                             <li>
-                                <b>Room 4 - </b><a href="/games/giant-monsters-and-pr-disasters">Giant Monsters and PR Disasters</a>
+                                <b>Room 4 - </b><a href="/games/giant-monsters-and-pr-disasters">Giant Monsters and PR
+                                    Disasters</a>
                             </li>
                         </ul>
                     </td>
                 </tr>
             </tbody>
         </table>
- 
+
         <h2>Saturday, 28th January</h2>
-       <table>
+        <table>
             <tbody>
                 <tr>
                     <td>10:00 - 13:00</td>
@@ -51,10 +52,12 @@ image: hero.jpg
                                 <b>Room 1 - </b><a href="/games/one-last-bash">One Last Bash</a>
                             </li>
                             <li>
-                                <b>Room 2 - </b><a href="/games/mage-the-ascension-20">Mage the Ascension 20: Isaac Newton Must Die</a>
+                                <b>Room 2 - </b><a href="/games/mage-the-ascension-20">Mage the Ascension 20: Isaac
+                                    Newton Must Die</a>
                             </li>
                             <li>
-                                <b>Room 4 - </b><a href="/games/giant-monsters-and-pr-disasters">Giant Monsters and PR Disasters</a>
+                                <b>Room 4 - </b><a href="/games/giant-monsters-and-pr-disasters">Giant Monsters and PR
+                                    Disasters</a>
                             </li>
                             <li>
                                 <b>Room 6 - </b><a href="/games/magnificent-chassis">The Magnificent Chassis</a>
@@ -76,7 +79,8 @@ image: hero.jpg
                                 <b>Room 4 - </b><a href="/games/the-opened-barrow">The Opened Barrow</a>
                             </li>
                             <li>
-                                <b>Room 6 - </b><a href="/games/cybercork-2063-soul-shilled">Cybercork 2063: Soul-Shilled</a>
+                                <b>Room 6 - </b><a href="/games/cybercork-2063-soul-shilled">Cybercork 2063:
+                                    Soul-Shilled</a>
                             </li>
                         </ul>
                     </td>
@@ -96,14 +100,14 @@ image: hero.jpg
                             <li>
                                 <b>Room 3 - </b><a href="/games/righteous-fiends">Righteous Fiends</a>
                             </li>
-                           <li>
+                            <li>
                                 <b>Room 6 - </b><a href="/games/one-for-the-road">One for the Road</a>
                             </li>
                         </ul>
                     </td>
                 </tr>
             </tbody>
-        </table>       
+        </table>
 
         <h2>Sunday, 29th January</h2>
         <table>
@@ -142,10 +146,12 @@ image: hero.jpg
                                 <b>Room 4 - </b><a href="/games/the-opened-barrow">The Opened Barrow</a>
                             </li>
                             <li>
-                                <b>Room 5 - </b><a href="/games/mage-the-ascension-20">Mage the Ascension 20: Isaac Newton Must Die</a>
+                                <b>Room 5 - </b><a href="/games/mage-the-ascension-20">Mage the Ascension 20: Isaac
+                                    Newton Must Die</a>
                             </li>
                             <li>
-                                <b>Room 6 - </b><a href="/games/cybercork-2063-soul-shilled">Cybercork 2063: Soul-Shilled</a>
+                                <b>Room 6 - </b><a href="/games/cybercork-2063-soul-shilled">Cybercork 2063:
+                                    Soul-Shilled</a>
                             </li>
                         </ul>
                     </td>
@@ -154,8 +160,322 @@ image: hero.jpg
         </table>
     </section>
 
+    <section class="schedule" id="ccgs">
+        <h1>Card Games Tournaments</h1>
+
+        <h2>Friday, 27th January</h2>
+        <table>
+            <thead>
+                <tr>
+                    <td>
+                        Start Time
+                    </td>
+                    <td>
+                        Registration Time
+                    </td>
+                    <td>
+                        Game
+                    </td>
+                    <td>
+                        Event
+                    </td>
+                    <td>
+                        Price
+                    </td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td rowspan="2">
+                        18:30
+                    </td>
+                    <td rowspan="2">
+                        17:00 - 18:15
+                    </td>
+                    <td>
+                        Magic: The Gathering
+                    </td>
+                    <td>
+                        Chaos Draft
+                    </td>
+                    <td>
+                        €30
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Commander
+                    </td>
+                    <td>
+                        Constructed Tournament
+                    </td>
+                    <td>
+                        €10
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h2>Saturday, 28th January</h2>
+        <table>
+            <thead>
+                <tr>
+                    <td>
+                        Start Time
+                    </td>
+                    <td>
+                        Registration Time
+                    </td>
+                    <td>
+                        Game
+                    </td>
+                    <td>
+                        Event
+                    </td>
+                    <td>
+                        Price
+                    </td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td rowspan="2">
+                        11:00
+                    </td>
+                    <td>
+                        10:00 - 10:45
+                    </td>
+                    <td>
+                        Magic: The Gathering
+                    </td>
+                    <td>
+                        Dominaria Remastered Draft
+                    </td>
+                    <td>
+                        €30
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        10:00 - 10:45
+                    </td>
+                    <td>
+                        Digimon TCG
+                    </td>
+                    <td>
+                        Constructed Tournament
+                    </td>
+                    <td>
+                        €10
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        11:30
+                    </td>
+                    <td>
+                        10:00 - 11:15
+                    </td>
+                    <td>
+                        Commander
+                    </td>
+                    <td>
+                        Constructed Tournament
+                    </td>
+                    <td>
+                        €10
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        12:00
+                    </td>
+                    <td>
+                        10:00 - 11:45
+                    </td>
+                    <td>
+                        Pokemon TCG
+                    </td>
+                    <td>
+                        Constructed Tournament
+                    </td>
+                    <td>
+                        €10
+                    </td>
+                </tr>
+                <tr>
+                    <td rowspan="2">
+                        14:30
+                    </td>
+                    <td rowspan="2">
+                        10:00 - 14:15
+                    </td>
+                    <td>
+                        Pauper
+                    </td>
+                    <td>
+                        Constructed Tournament
+                    </td>
+                    <td>
+                        €10
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Yu-Gi-Oh
+                    </td>
+                    <td>
+                        Constructed Tournament
+                    </td>
+                    <td>
+                        €10
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        15:00
+                    </td>
+                    <td>
+                        10:00 - 14:45
+                    </td>
+                    <td colspan="2">
+                        Commander Legends: Battle for Baldur's Draft
+                    </td>
+                    <td>
+                        €30
+                    </td>
+                </tr>
+
+            </tbody>
+        </table>
+
+        <h2>Sunday, 29th January</h2>
+        <table>
+            <thead>
+                <tr>
+                    <td>
+                        Start Time
+                    </td>
+                    <td>
+                        Registration Time
+                    </td>
+                    <td>
+                        Game
+                    </td>
+                    <td>
+                        Event
+                    </td>
+                    <td>
+                        Price
+                    </td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td rowspan="2">
+                        11:00
+                    </td>
+                    <td>
+                        10:00 - 10:45
+                    </td>
+                    <td>
+                        Magic: The Gathering
+                    </td>
+                    <td>
+                        Commander Legends Draft
+                    </td>
+                    <td>
+                        €30
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        10:00 - 10:45
+                    </td>
+                    <td>
+                        Digimon TCG
+                    </td>
+                    <td>
+                        Constructed Tournament
+                    </td>
+                    <td>
+                        €10
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        11:30
+                    </td>
+                    <td>
+                        10:00 - 11:15
+                    </td>
+                    <td>
+                        Commander
+                    </td>
+                    <td>
+                        Constructed Tournament
+                    </td>
+                    <td>
+                        €10
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        12:00
+                    </td>
+                    <td>
+                        10:00 - 11:45
+                    </td>
+                    <td>
+                        Pokemon TCG
+                    </td>
+                    <td>
+                        Constructed Tournament
+                    </td>
+                    <td>
+                        €10
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        13:30
+                    </td>
+                    <td>
+                        10:00 - 13:15
+                    </td>
+                    <td>
+                        Pioneer
+                    </td>
+                    <td>
+                        Constructed Tournament
+                    </td>
+                    <td>
+                        €10
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        14:30
+                    </td>
+                    <td>
+                        10:00 - 11:45
+                    </td>
+                    <td>
+                        Yu-Gi-Oh
+                    </td>
+                    <td>
+                        Constructed Tournament
+                    </td>
+                    <td>
+                        €10
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
     <section class="schedule" id="larps">
-        <h1><a href="#larps">LARPS</a></h1>
+        <h1>LARPS</h1>
 
         <h2>Saturday, 28th January</h2>
         <table>
