add new rpg denote 18+ add new to schedule

--- a/schedule.html
+++ b/schedule.html
@@ -26,6 +26,9 @@ image: hero.jpg
                     <td>
                         <ul>
                             <li>
+                                <b>Room 1 - </b><a href="/games/silhouettes-and-alcohol">Silhouettes and Alcohol</a>
+                            </li>
+                            <li>
                                 <b>Room 2 - </b><a href="/games/lets-try-microscope">Let's try Microscope</a>
                             </li>
                             <li>
