--- a/schedule.html
+++ b/schedule.html
@@ -55,15 +55,15 @@ image: hero.jpg
                                 <b>Room 1 - </b><a href="/games/one-last-bash">One Last Bash</a>
                             </li>
                             <li>
-                                <b>Room 2 - </b><a href="/games/mage-the-ascension-20">Mage the Ascension 20: Isaac
-                                    Newton Must Die</a>
-                            </li>
-                            <li>
                                 <b>Room 4 - </b><a href="/games/giant-monsters-and-pr-disasters">Giant Monsters and PR
                                     Disasters</a>
                             </li>
                             <li>
-                                <b>Room 6 - </b><a href="/games/the-magnificent-chassis">The Magnificent Chassis</a>
+                                <b>Room 6 - </b><a href="/games/mage-the-ascension-20">Mage the Ascension 20: Isaac
+                                    Newton Must Die</a>
+                            </li>
+                            <li>
+                                <b>Room 7 - </b><a href="/games/the-magnificent-chassis">The Magnificent Chassis</a>
                             </li>
                         </ul>
                     </td>
@@ -82,7 +82,11 @@ image: hero.jpg
                                 <b>Room 4 - </b><a href="/games/the-opened-barrow">The Opened Barrow</a>
                             </li>
                             <li>
-                                <b>Room 6 - </b><a href="/games/cybercork-2063-soul-shilled">Cybercork 2063:
+                                <b>Room 6 - </b><a href="/games/a-figure-drawn-in-dust">Trail of Cthulu: A Figure Drawn
+                                    in Dust</a>
+                            </li>
+                            <li>
+                                <b>Room 7 - </b><a href="/games/cybercork-2063-soul-shilled">Cybercork 2063:
                                     Soul-Shilled</a>
                             </li>
                         </ul>
@@ -98,13 +102,13 @@ image: hero.jpg
                                 <b>Room 1 - </b><a href="/games/lets-try-microscope">Let's Try Microscope</a>
                             </li>
                             <li>
-                                <b>Room 2 - </b><a href="/games/who-hoots-for-who">Who Hoots for Who?</a>
+                                <b>Room 6 - </b><a href="/games/who-hoots-for-who">Who Hoots for Who?</a>
                             </li>
                             <li>
                                 <b>Room 3 - </b><a href="/games/righteous-fiends">Righteous Fiends</a>
                             </li>
                             <li>
-                                <b>Room 6 - </b><a href="/games/one-for-the-road">One for the Road</a>
+                                <b>Room 7 - </b><a href="/games/one-for-the-road">One for the Road</a>
                             </li>
                         </ul>
                     </td>
@@ -125,7 +129,7 @@ image: hero.jpg
                                 <b>Room 1 - </b><a href="/games/hyperion">Hyperion</a>
                             </li>
                             <li>
-                                <b>Room 6 - </b><a href="/games/one-for-the-road">One for the Road</a>
+                                <b>Room 7 - </b><a href="/games/one-for-the-road">One for the Road</a>
                             </li>
                         </ul>
                     </td>
@@ -139,10 +143,7 @@ image: hero.jpg
                             <li>
                                 <b>Room 1 - </b><a href="/games/one-last-bash">One Last Bash</a>
                             </li>
-                            <li>
-                                <b>Room 2 - </b><a href="/games/who-hoots-for-who">Who Hoots for Who?</a>
-                            </li>
-                            <li>
+                           <li>
                                 <b>Room 3 - </b><a href="/games/righteous-fiends">Righteous Fiends</a>
                             </li>
                             <li>
@@ -152,8 +153,11 @@ image: hero.jpg
                                 <b>Room 5 - </b><a href="/games/mage-the-ascension-20">Mage the Ascension 20: Isaac
                                     Newton Must Die</a>
                             </li>
+                             <li>
+                                <b>Room 6 - </b><a href="/games/who-hoots-for-who">Who Hoots for Who?</a>
+                            </li>
                             <li>
-                                <b>Room 6 - </b><a href="/games/cybercork-2063-soul-shilled">Cybercork 2063:
+                                <b>Room 7 - </b><a href="/games/cybercork-2063-soul-shilled">Cybercork 2063:
                                     Soul-Shilled</a>
                             </li>
                         </ul>
@@ -183,7 +187,7 @@ image: hero.jpg
                         Event
                     </td>
                     <td>
-                        Price
+                        Entry
                     </td>
                 </tr>
             </thead>
@@ -236,7 +240,7 @@ image: hero.jpg
                         Event
                     </td>
                     <td>
-                        Price
+                        Entry
                     </td>
                 </tr>
             </thead>
@@ -369,7 +373,7 @@ image: hero.jpg
                         Event
                     </td>
                     <td>
-                        Price
+                        Entry
                     </td>
                 </tr>
             </thead>
