--- a/schedule.html
+++ b/schedule.html
@@ -18,25 +18,88 @@ image: hero.jpg
     <section class="schedule" id="rpgs">
         <h1>RPGs</h1>
 
-        <h2>Friday, 27th January</h2>
+        <h2>Friday</h2>
         <table>
             <tbody>
                 <tr>
-                    <td>18:00 - 21:00</td>
+                    <td>18:00</td>
+                    <td>
+                        <ul>
+                            <li><b>The Other Storytelling System - </b><a href="/games/the-other-tale">The Other Tale</a></li>
+                            <li><b>Red Giant - </b> <a href="/games/on-broken-wings">On Broken Wings</a></li>
+                            <li><b>Pathfinder 2E - </b> <a href="/games/hes-the-sheriff-and-were-frozen-here">He's the Sheriff and We're Frozen in Here</a></li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td>22:00</td>
+                    <td>
+                        <ul>
+                            <li><b>Little Fears: Nightmare Edition - </b><a href="/games/the-bonfire-night-terror">The Bonfire Night Terror at Camp Riverbend</a></li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h2>Saturday</h2>
+        <table>
+            <tbody>
+                <tr>
+                    <td>10:00</td>
                     <td>
                         <ul>
                             <li>
-                                <b>Room 1 - </b><a href="/games/silhouettes-and-alcohol">Silhouettes and Alcohol</a>
+                                <b>D&D 5E - </b> <a href="/games/remnants">Remnants</a>
                             </li>
                             <li>
-                                <b>Room 2 - </b><a href="/games/lets-try-microscope">Let's try Microscope</a>
+                                <b>Monsters and Other Childish Things - </b><a href="/games/childs-play-at-summerville-manor">Child's Play at Summerville Manor</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td>14:00</td>
+                    <td>
+                        <ul>
+                            <li>
+                                <b>GUMSHOE - </b><a href="/games/case-of-the-great-ring">The Case of the Great Ring: A shires Out! Adventure</a>
                             </li>
                             <li>
-                                <b>Room 3 - </b><a href="/games/original-sins">Original Sins</a>
+                                <b>D&D 5E - </b><a href="/games/treasure-of-dag-dreadmaw">The treasure of Dag Dreadmaw</a>
                             </li>
                             <li>
-                                <b>Room 4 - </b><a href="/games/giant-monsters-and-pr-disasters">Giant Monsters and PR
-                                    Disasters</a>
+                                <b>FIST - </b><a href="/games/systematic-mirage">FIST: The Systematic Mirage</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        18:00
+                    </td>
+                    <td>
+                        <ul>
+                            <li>
+                                <b>D&D 5E - </b><a href="/games/come-away-oh-human-child">Come Away Oh Human Child</a>
+                            </li>
+                            <li>
+                                <b>Alien - </b><a href="/games/it-waits-in-the-dark">It Waits in the Dark</a>
+                            </li>
+                            <li>
+                                <b>Innocents - </b><a href="/games/lights-out">Lights Out!</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        22:00
+                    </td>
+                    <td>
+                        <ul>
+                            <li>
+                                <b>Call of Cthulu 5E - </b><a href="/games/frunglecon-2021">Frunglecon 2021</a>
                             </li>
                         </ul>
                     </td>
@@ -44,121 +107,38 @@ image: hero.jpg
             </tbody>
         </table>
 
-        <h2>Saturday, 28th January</h2>
-        <table>
-            <tbody>
-                <tr>
-                    <td>10:00 - 13:00</td>
-                    <td>
-                        <ul>
-                            <li>
-                                <b>Room 1 - </b><a href="/games/one-last-bash">One Last Bash</a>
-                            </li>
-                            <li>
-                                <b>Room 4 - </b><a href="/games/giant-monsters-and-pr-disasters">Giant Monsters and PR
-                                    Disasters</a>
-                            </li>
-                            <li>
-                                <b>Room 6 - </b><a href="/games/mage-the-ascension-20">Mage the Ascension 20: Isaac
-                                    Newton Must Die</a>
-                            </li>
-                            <li>
-                                <b>Room 7 - </b><a href="/games/the-magnificent-chassis">The Magnificent Chassis</a>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-                <tr>
-                    <td>14:00 - 17:00</td>
-                    <td>
-                        <ul>
-                            <li>
-                                <b>Room 1 - </b><a href="/games/hyperion">Hyperion</a>
-                            </li>
-                            <li>
-                                <b>Room 3 - </b><a href="/games/original-sins">Original Sins</a>
-                            </li>
-                            <li>
-                                <b>Room 4 - </b><a href="/games/the-opened-barrow">The Opened Barrow</a>
-                            </li>
-                            <li>
-                                <b>Room 6 - </b><a href="/games/a-figure-drawn-in-dust">Trail of Cthulu: A Figure Drawn
-                                    in Dust</a>
-                            </li>
-                            <li>
-                                <b>Room 7 - </b><a href="/games/cybercork-2063-soul-shilled">Cybercork 2063:
-                                    Soul-Shilled</a>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        18:00 - 21:00
-                    </td>
-                    <td>
-                        <ul>
-                            <li>
-                                <b>Room 1 - </b><a href="/games/lets-try-microscope">Let's Try Microscope</a>
-                            </li>
-                            <li>
-                                <b>Room 6 - </b><a href="/games/who-hoots-for-who">Who Hoots for Who?</a>
-                            </li>
-                            <li>
-                                <b>Room 3 - </b><a href="/games/righteous-fiends">Righteous Fiends</a>
-                            </li>
-                            <li>
-                                <b>Room 7 - </b><a href="/games/one-for-the-road">One for the Road</a>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-
-        <h2>Sunday, 29th January</h2>
+        <h2>Sunday</h2>
         <table>
             <tbody>
                 <tr>
                     <td>
-                        10:00 - 13:00
+                        10:00
                     </td>
                     <td>
                         <ul>
                             <li>
-                                <b>Room 1 - </b><a href="/games/hyperion">Hyperion</a>
+                                <b>Pathfinder 2E - </b><a href="/games/hes-the-sheriff-and-were-frozen-here">He's the Sheriff and We're Frozen in Here</a>
                             </li>
                             <li>
-                                <b>Room 7 - </b><a href="/games/one-for-the-road">One for the Road</a>
+                                <b>Legend of the Five Rings (FFG Edition) - </b><a href="/games/snow-falls-at-kyuden-shinjin">Snow Falls at Kyuden Shinjin</a>
+                            </li>
+                            <li>
+                                <b>Savage Worlds - </b><a href="/games/rat-in-a-cage">Tales of Toholon - Rat in a Cage</a>
                             </li>
                         </ul>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        14:00 - 17:00
+                        14:00
                     </td>
                     <td>
                         <ul>
                             <li>
-                                <b>Room 1 - </b><a href="/games/one-last-bash">One Last Bash</a>
-                            </li>
-                           <li>
-                                <b>Room 3 - </b><a href="/games/righteous-fiends">Righteous Fiends</a>
+                                <b>Trail of Cthulu 2E - </b><a href="/games/afterlight">Afterlight</a>
                             </li>
                             <li>
-                                <b>Room 4 - </b><a href="/games/the-opened-barrow">The Opened Barrow</a>
-                            </li>
-                            <li>
-                                <b>Room 5 - </b><a href="/games/mage-the-ascension-20">Mage the Ascension 20: Isaac
-                                    Newton Must Die</a>
-                            </li>
-                             <li>
-                                <b>Room 6 - </b><a href="/games/who-hoots-for-who">Who Hoots for Who?</a>
-                            </li>
-                            <li>
-                                <b>Room 7 - </b><a href="/games/cybercork-2063-soul-shilled">Cybercork 2063:
-                                    Soul-Shilled</a>
+                                <b>D&D 5E - </b><a href="/games/come-away-oh-human-child">Away Oh Human Child</a>
                             </li>
                         </ul>
                     </td>
@@ -167,7 +147,7 @@ image: hero.jpg
         </table>
     </section>
 
-    <section class="schedule" id="ccgs">
+    <!-- <section class="schedule" id="ccgs">
         <h1>Card Games Tournaments</h1>
 
         <h2>Friday, 27th January</h2>
@@ -479,28 +459,36 @@ image: hero.jpg
                 </tr>
             </tbody>
         </table>
-    </section>
+    </section> -->
 
     <section class="schedule" id="larps">
         <h1>LARPS</h1>
 
-        <h2>Saturday, 28th January</h2>
+        <h2>Saturday</h2>
         <table>
             <tbody>
                 <tr>
                     <td>
-                        14:00 - 17:00
+                        10:00
                     </td>
                     <td>
-                        <a href="/games/city-of-no-flag">City of No Flag Game: 18 Badlands Adventures</a>
+                        <a href="/games/its-for-your-own-good">It's for Your Own Good</a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        18:00 - 21:00
+                        14:00
                     </td>
                     <td>
-                        <a href="/games/tales-of-toholon">Tales of Toholon: Last Refuge of the Scoundrel</a>
+                        <a href="/games/the-summit-of-chimes">The Summit of Chimes</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        18:00
+                    </td>
+                    <td>
+                        <a href="/games/instrument-of-surrender">Instrument of Surrender</a>
                     </td>
                 </tr>
             </tbody>
@@ -511,10 +499,10 @@ image: hero.jpg
             <tbody>
                 <tr>
                     <td>
-                        14:00 - 17:00
+                        14:00
                     </td>
                     <td>
-                        <a href="/games/long-live-the-king">Long Live the King</a>
+                        <a href="/games/the-red-sands-of-stenthos">7 Rivers: The Red Sands of Stenthos</a>
                     </td>
                 </tr>
             </tbody>
