maybe fixing rpg button

--- a/schedule.html
+++ b/schedule.html
@@ -25,9 +25,9 @@ image: hero.jpg
                     <td>18:00</td>
                     <td>
                         <ul>
-                            <li><b>The Other Storytelling System - </b><a href="/games/the-other-tale">The Other Tale</a></li>
-                            <li><b>Red Giant - </b> <a href="/games/on-broken-wings">On Broken Wings</a></li>
-                            <li><b>Pathfinder 2E - </b> <a href="/games/hes-the-sheriff-and-were-frozen-here">He's the Sheriff and We're Frozen in Here</a></li>
+                            <li><b>Homebrew - </b><a href="/games/abused-powers">Abused Powers</a></li>
+                            <li><b>Alien - </b> <a href="/games/it-waits-in-the-dark">It waits in the dark</a></li>
+                            <li><b>Sentiment - </b> <a href="/games/reflection-zero-to-hero">He's the Sheriff and We're Frozen in Here</a></li>
                         </ul>
                     </td>
                 </tr>
