--- a/schedule.html
+++ b/schedule.html
@@ -28,6 +28,7 @@ image: hero.jpg
                             <li><b>Homebrew - </b><a href="/games/abused-powers">Abused Powers</a></li>
                             <li><b>Alien - </b> <a href="/games/it-waits-in-the-dark">It waits in the dark</a></li>
                             <li><b>Sentiment - </b> <a href="/games/reflection-zero-to-hero">He's the Sheriff and We're Frozen in Here</a></li>
+                            <li><b>Shires out - </b> <a href="/games/hair-of-the-hare-of-the-heir">Hair of the hare of the heir</a></li>
                         </ul>
                     </td>
                 </tr>
