--- a/schedule.html
+++ b/schedule.html
@@ -36,7 +36,7 @@ image: hero.jpg
                     <td>22:00</td>
                     <td>
                         <ul>
-                            <li><b>Little Fears: Nightmare Edition - </b><a href="/games/the-bonfire-night-terror">The Bonfire Night Terror at Camp Riverbend</a></li>
+                            <li><b>Cyberpunk RED - </b><a href="/games/bad-product">Bad Product</a></li>
                         </ul>
                     </td>
                 </tr>
@@ -51,7 +51,7 @@ image: hero.jpg
                     <td>
                         <ul>
                             <li>
-                                <b>D&D 5E - </b> <a href="/games/remnants">Remnants</a>
+                                <b>Ryuutuma - </b> <a href="/games/letters-to-a-departed-dragon">Letters to a Departed Dragon</a>
                             </li>
                             <li>
                                 <b>Monsters and Other Childish Things - </b><a href="/games/childs-play-at-summerville-manor">Child's Play at Summerville Manor</a>
