--- a/schedule.html
+++ b/schedule.html
@@ -54,7 +54,7 @@ image: hero.jpg
                                 <b>Ryuutuma - </b> <a href="/games/letters-to-a-departed-dragon">Letters to a Departed Dragon</a>
                             </li>
                             <li>
-                                <b>Monsters and Other Childish Things - </b><a href="/games/childs-play-at-summerville-manor">Child's Play at Summerville Manor</a>
+                                <b>Ryuutuma - </b><a href="/games/search-for-the-dragonstar">Search for the Dragonstar</a>
                             </li>
                         </ul>
                     </td>
